# calcifer

./: .gitignore  README.md  pyproject.toml
calcifer/: calcifer.py
calcifer/commands/: auth0.py  github.py  jira.py
calcifer/models/: github.py
calcifer/services/: auth0_pager.py  github.py  github_pager.py  github_rest_manager.py  jira.py  jira_pager.py  rest_pager.py
calcifer/utils/: cache.py  file_writer.py  json_logger.py
