[tool.poetry]
name = "calcifer"
version = "0.1.0"
description = ""
authors = ["MelaHub <pamela.gotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
click = "^7.1.2"
tdqm = "^0.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
check_github = "calcifer.calcifer:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

