[tool.poetry]
name = "calcifer"
version = "0.1.0"
description = ""
authors = ["MelaHub <pamela.gotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
tdqm = "^0.0.1"
pydantic = "^1.9.1"
curlify = "^2.2.1"
python-json-logger = "^2.0.4"
click = "^8.1.3"
bandit = "^1.7.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.poetry.scripts]
calcifer = "calcifer.calcifer:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

